--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div {
+            width: 100px;
+            height: 100px;
+            background-color: skyblue;
+        }
+    </style>
+</head>
+<body>
+    <div></div>
     <script>
         function countDown(time) {
             var nowTime = +new Date();
@@ -22,8 +32,5 @@
         }
         console.log(countDown('2022-6-2 18:00:00'));
     </script>
-</head>
-<body>
-    
 </body>
 </html>
