--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         div {
             width: 100px;
             height: 100px;
-            background-color: skyblue;
+            background-color: pink;
         }
     </style>
 </head>
